<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout2"
        android:gravity="center">

        <TextView
            android:id="@+id/text_main_greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_greeting"
            android:textSize="22sp"
            android:layout_marginVertical="64dp"
            android:layout_marginHorizontal="16dp"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_startup"
            android:layout_margin="20dp"
            android:textSize="16sp"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/button_select_xml"
            android:text="@string/main_project_xml"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/button_select_tflite"
            android:text="@string/main_project_tflite"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="64dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout1"
        android:gravity="center">

        <Button
            android:id="@+id/button_start"
            android:text="@string/main_start"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>