<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:layout_marginTop="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/machine_learning_heading"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/machine_learning_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/machine_learning_project"
            android:layout_marginTop="8dp"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout1"
        app:layout_constraintBottom_toTopOf="@id/layout3">

        <TextView
            android:id="@+id/machine_learning_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/machine_learning_label"
            android:layout_marginVertical="10dp" />

        <ListView
            android:id="@+id/list_view_machine_learning"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:dividerHeight="2dp"
            android:nestedScrollingEnabled="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout2"
        app:layout_constraintBottom_toTopOf="@id/layout4">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/machine_learning_auto_record_feature"
                android:labelFor="@id/button_auto_record"/>

            <ToggleButton
                android:id="@+id/button_auto_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/machine_learning_auto_stop"
                android:labelFor="@id/button_auto_stop"/>

            <ToggleButton
                android:id="@+id/button_auto_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/text_seek_vector_sensitivity"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/machine_learning_auto_record_vector"
                android:labelFor="@id/seek_vector_sensitivity"/>

            <SeekBar
                android:id="@+id/seek_vector_sensitivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="63"
                android:progress="3"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/layout3"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/button_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:text="@string/machine_learning_start_recording"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>